--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,16 @@ h1 {
   padding: 5rem 2rem;
   text-align: center;
 }
+li.placeholder { background: rgb(255,240,120);}
+li.placeholder:before {
+  content: "Drop here"; color: rgb(225,210,90);
+}
+ul {
+  list-style: none;
+  margin:0;
+  padding:0
+}
+li {
+  padding: 5px;
+  background:#eee
+}
